parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> main
Rule 1     main -> Statements
Rule 2     Statements -> Statement Statements
Rule 3     Statements -> Statement
Rule 4     Statement -> assign SEMI_COLON Statements
Rule 5     Statement -> expression SEMI_COLON Statements
Rule 6     Statement -> list SEMI_COLON Statements
Rule 7     Statement -> do L_CBRACES Statements R_CBRACES while LPAREN COND RPAREN SEMI_COLON Statements
Rule 8     Statement -> until LPAREN COND RPAREN L_CBRACES Statements R_CBRACES Statements
Rule 9     Statement -> foreach DOLLAR ID LPAREN list RPAREN L_CBRACES Statements R_CBRACES Statements
Rule 10    Statement -> declaration Statements
Rule 11    Statement -> <empty>
Rule 12    declaration -> var_list SEMI_COLON
Rule 13    var_list -> DOLLAR ID
Rule 14    var_list -> DOLLAR ID COMMA var_list
Rule 15    var_list -> DOLLAR ID EQUAL expression
Rule 16    var_list -> DOLLAR ID EQUAL expression COMMA var_list
Rule 17    COND -> DOLLAR ID rel DOLLAR ID
Rule 18    COND -> expression rel expression
Rule 19    COND -> expression rel DOLLAR ID
Rule 20    COND -> DOLLAR ID rel expression
Rule 21    rel -> goe
Rule 22    rel -> loe
Rule 23    rel -> great
Rule 24    rel -> less
Rule 25    rel -> eq
Rule 26    assign -> DOLLAR ID EQUAL expression
Rule 27    expression -> expression PLUS term
Rule 28    expression -> expression MINUS term
Rule 29    expression -> expression TIMES term
Rule 30    expression -> expression DIVIDE term
Rule 31    expression -> LPAREN expression RPAREN
Rule 32    expression -> term
Rule 33    list -> AT ID
Rule 34    term -> NUMBER
Rule 35    term -> DOLLAR ID

Terminals, with rules where they appear

AT                   : 33
COMMA                : 14 16
DIVIDE               : 30
DOLLAR               : 9 13 14 15 16 17 17 19 20 26 35
EQUAL                : 15 16 26
ID                   : 9 13 14 15 16 17 17 19 20 26 33 35
LPAREN               : 7 8 9 31
L_CBRACES            : 7 8 9
MINUS                : 28
NUMBER               : 34
PLUS                 : 27
RPAREN               : 7 8 9 31
R_CBRACES            : 7 8 9
SEMI_COLON           : 4 5 6 7 12
TIMES                : 29
do                   : 7
eq                   : 25
error                : 
foreach              : 9
goe                  : 21
great                : 23
less                 : 24
loe                  : 22
until                : 8
while                : 7

Nonterminals, with rules where they appear

COND                 : 7 8
Statement            : 2 3
Statements           : 1 2 4 5 6 7 7 8 8 9 9 10
assign               : 4
declaration          : 10
expression           : 5 15 16 18 18 19 20 26 27 28 29 30 31
list                 : 6 9
main                 : 0
rel                  : 17 18 19 20
term                 : 27 28 29 30 32
var_list             : 12 14 16

Parsing method: LALR

state 0

    (0) S' -> . main
    (1) main -> . Statements
    (2) Statements -> . Statement Statements
    (3) Statements -> . Statement
    (4) Statement -> . assign SEMI_COLON Statements
    (5) Statement -> . expression SEMI_COLON Statements
    (6) Statement -> . list SEMI_COLON Statements
    (7) Statement -> . do L_CBRACES Statements R_CBRACES while LPAREN COND RPAREN SEMI_COLON Statements
    (8) Statement -> . until LPAREN COND RPAREN L_CBRACES Statements R_CBRACES Statements
    (9) Statement -> . foreach DOLLAR ID LPAREN list RPAREN L_CBRACES Statements R_CBRACES Statements
    (10) Statement -> . declaration Statements
    (11) Statement -> .
    (26) assign -> . DOLLAR ID EQUAL expression
    (27) expression -> . expression PLUS term
    (28) expression -> . expression MINUS term
    (29) expression -> . expression TIMES term
    (30) expression -> . expression DIVIDE term
    (31) expression -> . LPAREN expression RPAREN
    (32) expression -> . term
    (33) list -> . AT ID
    (12) declaration -> . var_list SEMI_COLON
    (34) term -> . NUMBER
    (35) term -> . DOLLAR ID
    (13) var_list -> . DOLLAR ID
    (14) var_list -> . DOLLAR ID COMMA var_list
    (15) var_list -> . DOLLAR ID EQUAL expression
    (16) var_list -> . DOLLAR ID EQUAL expression COMMA var_list

  ! shift/reduce conflict for do resolved as shift
  ! shift/reduce conflict for until resolved as shift
  ! shift/reduce conflict for foreach resolved as shift
  ! shift/reduce conflict for DOLLAR resolved as shift
  ! shift/reduce conflict for LPAREN resolved as shift
  ! shift/reduce conflict for AT resolved as shift
  ! shift/reduce conflict for NUMBER resolved as shift
    do              shift and go to state 7
    until           shift and go to state 9
    foreach         shift and go to state 10
    $end            reduce using rule 11 (Statement -> .)
    DOLLAR          shift and go to state 11
    LPAREN          shift and go to state 8
    AT              shift and go to state 14
    NUMBER          shift and go to state 16

  ! do              [ reduce using rule 11 (Statement -> .) ]
  ! until           [ reduce using rule 11 (Statement -> .) ]
  ! foreach         [ reduce using rule 11 (Statement -> .) ]
  ! DOLLAR          [ reduce using rule 11 (Statement -> .) ]
  ! LPAREN          [ reduce using rule 11 (Statement -> .) ]
  ! AT              [ reduce using rule 11 (Statement -> .) ]
  ! NUMBER          [ reduce using rule 11 (Statement -> .) ]

    main                           shift and go to state 1
    Statements                     shift and go to state 2
    Statement                      shift and go to state 3
    assign                         shift and go to state 4
    expression                     shift and go to state 5
    list                           shift and go to state 6
    declaration                    shift and go to state 12
    term                           shift and go to state 13
    var_list                       shift and go to state 15

state 1

    (0) S' -> main .



state 2

    (1) main -> Statements .

    $end            reduce using rule 1 (main -> Statements .)


state 3

    (2) Statements -> Statement . Statements
    (3) Statements -> Statement .
    (2) Statements -> . Statement Statements
    (3) Statements -> . Statement
    (4) Statement -> . assign SEMI_COLON Statements
    (5) Statement -> . expression SEMI_COLON Statements
    (6) Statement -> . list SEMI_COLON Statements
    (7) Statement -> . do L_CBRACES Statements R_CBRACES while LPAREN COND RPAREN SEMI_COLON Statements
    (8) Statement -> . until LPAREN COND RPAREN L_CBRACES Statements R_CBRACES Statements
    (9) Statement -> . foreach DOLLAR ID LPAREN list RPAREN L_CBRACES Statements R_CBRACES Statements
    (10) Statement -> . declaration Statements
    (11) Statement -> .
    (26) assign -> . DOLLAR ID EQUAL expression
    (27) expression -> . expression PLUS term
    (28) expression -> . expression MINUS term
    (29) expression -> . expression TIMES term
    (30) expression -> . expression DIVIDE term
    (31) expression -> . LPAREN expression RPAREN
    (32) expression -> . term
    (33) list -> . AT ID
    (12) declaration -> . var_list SEMI_COLON
    (34) term -> . NUMBER
    (35) term -> . DOLLAR ID
    (13) var_list -> . DOLLAR ID
    (14) var_list -> . DOLLAR ID COMMA var_list
    (15) var_list -> . DOLLAR ID EQUAL expression
    (16) var_list -> . DOLLAR ID EQUAL expression COMMA var_list

  ! shift/reduce conflict for do resolved as shift
  ! shift/reduce conflict for until resolved as shift
  ! shift/reduce conflict for foreach resolved as shift
  ! reduce/reduce conflict for $end resolved using rule 3 (Statements -> Statement .)
  ! shift/reduce conflict for do resolved as shift
  ! shift/reduce conflict for until resolved as shift
  ! shift/reduce conflict for foreach resolved as shift
  ! reduce/reduce conflict for DOLLAR resolved using rule 3 (Statements -> Statement .)
  ! reduce/reduce conflict for LPAREN resolved using rule 3 (Statements -> Statement .)
  ! reduce/reduce conflict for AT resolved using rule 3 (Statements -> Statement .)
  ! reduce/reduce conflict for NUMBER resolved using rule 3 (Statements -> Statement .)
  ! reduce/reduce conflict for R_CBRACES resolved using rule 3 (Statements -> Statement .)
  ! shift/reduce conflict for DOLLAR resolved as shift
  ! shift/reduce conflict for LPAREN resolved as shift
  ! shift/reduce conflict for AT resolved as shift
  ! shift/reduce conflict for NUMBER resolved as shift
    $end            reduce using rule 3 (Statements -> Statement .)
    R_CBRACES       reduce using rule 3 (Statements -> Statement .)
    do              shift and go to state 7
    until           shift and go to state 9
    foreach         shift and go to state 10
    DOLLAR          shift and go to state 11
    LPAREN          shift and go to state 8
    AT              shift and go to state 14
    NUMBER          shift and go to state 16

  ! do              [ reduce using rule 3 (Statements -> Statement .) ]
  ! until           [ reduce using rule 3 (Statements -> Statement .) ]
  ! foreach         [ reduce using rule 3 (Statements -> Statement .) ]
  ! DOLLAR          [ reduce using rule 3 (Statements -> Statement .) ]
  ! LPAREN          [ reduce using rule 3 (Statements -> Statement .) ]
  ! AT              [ reduce using rule 3 (Statements -> Statement .) ]
  ! NUMBER          [ reduce using rule 3 (Statements -> Statement .) ]
  ! $end            [ reduce using rule 11 (Statement -> .) ]
  ! do              [ reduce using rule 11 (Statement -> .) ]
  ! until           [ reduce using rule 11 (Statement -> .) ]
  ! foreach         [ reduce using rule 11 (Statement -> .) ]
  ! DOLLAR          [ reduce using rule 11 (Statement -> .) ]
  ! LPAREN          [ reduce using rule 11 (Statement -> .) ]
  ! AT              [ reduce using rule 11 (Statement -> .) ]
  ! NUMBER          [ reduce using rule 11 (Statement -> .) ]
  ! R_CBRACES       [ reduce using rule 11 (Statement -> .) ]

    Statement                      shift and go to state 3
    Statements                     shift and go to state 17
    assign                         shift and go to state 4
    expression                     shift and go to state 5
    list                           shift and go to state 6
    declaration                    shift and go to state 12
    term                           shift and go to state 13
    var_list                       shift and go to state 15

state 4

    (4) Statement -> assign . SEMI_COLON Statements

    SEMI_COLON      shift and go to state 18


state 5

    (5) Statement -> expression . SEMI_COLON Statements
    (27) expression -> expression . PLUS term
    (28) expression -> expression . MINUS term
    (29) expression -> expression . TIMES term
    (30) expression -> expression . DIVIDE term

    SEMI_COLON      shift and go to state 19
    PLUS            shift and go to state 20
    MINUS           shift and go to state 21
    TIMES           shift and go to state 22
    DIVIDE          shift and go to state 23


state 6

    (6) Statement -> list . SEMI_COLON Statements

    SEMI_COLON      shift and go to state 24


state 7

    (7) Statement -> do . L_CBRACES Statements R_CBRACES while LPAREN COND RPAREN SEMI_COLON Statements

    L_CBRACES       shift and go to state 25


state 8

    (31) expression -> LPAREN . expression RPAREN
    (27) expression -> . expression PLUS term
    (28) expression -> . expression MINUS term
    (29) expression -> . expression TIMES term
    (30) expression -> . expression DIVIDE term
    (31) expression -> . LPAREN expression RPAREN
    (32) expression -> . term
    (34) term -> . NUMBER
    (35) term -> . DOLLAR ID

    LPAREN          shift and go to state 8
    NUMBER          shift and go to state 16
    DOLLAR          shift and go to state 27

    expression                     shift and go to state 26
    term                           shift and go to state 13

state 9

    (8) Statement -> until . LPAREN COND RPAREN L_CBRACES Statements R_CBRACES Statements

    LPAREN          shift and go to state 28


state 10

    (9) Statement -> foreach . DOLLAR ID LPAREN list RPAREN L_CBRACES Statements R_CBRACES Statements

    DOLLAR          shift and go to state 29


state 11

    (26) assign -> DOLLAR . ID EQUAL expression
    (35) term -> DOLLAR . ID
    (13) var_list -> DOLLAR . ID
    (14) var_list -> DOLLAR . ID COMMA var_list
    (15) var_list -> DOLLAR . ID EQUAL expression
    (16) var_list -> DOLLAR . ID EQUAL expression COMMA var_list

    ID              shift and go to state 30


state 12

    (10) Statement -> declaration . Statements
    (2) Statements -> . Statement Statements
    (3) Statements -> . Statement
    (4) Statement -> . assign SEMI_COLON Statements
    (5) Statement -> . expression SEMI_COLON Statements
    (6) Statement -> . list SEMI_COLON Statements
    (7) Statement -> . do L_CBRACES Statements R_CBRACES while LPAREN COND RPAREN SEMI_COLON Statements
    (8) Statement -> . until LPAREN COND RPAREN L_CBRACES Statements R_CBRACES Statements
    (9) Statement -> . foreach DOLLAR ID LPAREN list RPAREN L_CBRACES Statements R_CBRACES Statements
    (10) Statement -> . declaration Statements
    (11) Statement -> .
    (26) assign -> . DOLLAR ID EQUAL expression
    (27) expression -> . expression PLUS term
    (28) expression -> . expression MINUS term
    (29) expression -> . expression TIMES term
    (30) expression -> . expression DIVIDE term
    (31) expression -> . LPAREN expression RPAREN
    (32) expression -> . term
    (33) list -> . AT ID
    (12) declaration -> . var_list SEMI_COLON
    (34) term -> . NUMBER
    (35) term -> . DOLLAR ID
    (13) var_list -> . DOLLAR ID
    (14) var_list -> . DOLLAR ID COMMA var_list
    (15) var_list -> . DOLLAR ID EQUAL expression
    (16) var_list -> . DOLLAR ID EQUAL expression COMMA var_list

  ! shift/reduce conflict for do resolved as shift
  ! shift/reduce conflict for until resolved as shift
  ! shift/reduce conflict for foreach resolved as shift
  ! shift/reduce conflict for DOLLAR resolved as shift
  ! shift/reduce conflict for LPAREN resolved as shift
  ! shift/reduce conflict for AT resolved as shift
  ! shift/reduce conflict for NUMBER resolved as shift
    do              shift and go to state 7
    until           shift and go to state 9
    foreach         shift and go to state 10
    $end            reduce using rule 11 (Statement -> .)
    R_CBRACES       reduce using rule 11 (Statement -> .)
    DOLLAR          shift and go to state 11
    LPAREN          shift and go to state 8
    AT              shift and go to state 14
    NUMBER          shift and go to state 16

  ! do              [ reduce using rule 11 (Statement -> .) ]
  ! until           [ reduce using rule 11 (Statement -> .) ]
  ! foreach         [ reduce using rule 11 (Statement -> .) ]
  ! DOLLAR          [ reduce using rule 11 (Statement -> .) ]
  ! LPAREN          [ reduce using rule 11 (Statement -> .) ]
  ! AT              [ reduce using rule 11 (Statement -> .) ]
  ! NUMBER          [ reduce using rule 11 (Statement -> .) ]

    declaration                    shift and go to state 12
    Statements                     shift and go to state 31
    Statement                      shift and go to state 3
    assign                         shift and go to state 4
    expression                     shift and go to state 5
    list                           shift and go to state 6
    term                           shift and go to state 13
    var_list                       shift and go to state 15

state 13

    (32) expression -> term .

    SEMI_COLON      reduce using rule 32 (expression -> term .)
    PLUS            reduce using rule 32 (expression -> term .)
    MINUS           reduce using rule 32 (expression -> term .)
    TIMES           reduce using rule 32 (expression -> term .)
    DIVIDE          reduce using rule 32 (expression -> term .)
    RPAREN          reduce using rule 32 (expression -> term .)
    goe             reduce using rule 32 (expression -> term .)
    loe             reduce using rule 32 (expression -> term .)
    great           reduce using rule 32 (expression -> term .)
    less            reduce using rule 32 (expression -> term .)
    eq              reduce using rule 32 (expression -> term .)
    COMMA           reduce using rule 32 (expression -> term .)


state 14

    (33) list -> AT . ID

    ID              shift and go to state 32


state 15

    (12) declaration -> var_list . SEMI_COLON

    SEMI_COLON      shift and go to state 33


state 16

    (34) term -> NUMBER .

    SEMI_COLON      reduce using rule 34 (term -> NUMBER .)
    PLUS            reduce using rule 34 (term -> NUMBER .)
    MINUS           reduce using rule 34 (term -> NUMBER .)
    TIMES           reduce using rule 34 (term -> NUMBER .)
    DIVIDE          reduce using rule 34 (term -> NUMBER .)
    RPAREN          reduce using rule 34 (term -> NUMBER .)
    goe             reduce using rule 34 (term -> NUMBER .)
    loe             reduce using rule 34 (term -> NUMBER .)
    great           reduce using rule 34 (term -> NUMBER .)
    less            reduce using rule 34 (term -> NUMBER .)
    eq              reduce using rule 34 (term -> NUMBER .)
    COMMA           reduce using rule 34 (term -> NUMBER .)


state 17

    (2) Statements -> Statement Statements .

    $end            reduce using rule 2 (Statements -> Statement Statements .)
    do              reduce using rule 2 (Statements -> Statement Statements .)
    until           reduce using rule 2 (Statements -> Statement Statements .)
    foreach         reduce using rule 2 (Statements -> Statement Statements .)
    DOLLAR          reduce using rule 2 (Statements -> Statement Statements .)
    LPAREN          reduce using rule 2 (Statements -> Statement Statements .)
    AT              reduce using rule 2 (Statements -> Statement Statements .)
    NUMBER          reduce using rule 2 (Statements -> Statement Statements .)
    R_CBRACES       reduce using rule 2 (Statements -> Statement Statements .)


state 18

    (4) Statement -> assign SEMI_COLON . Statements
    (2) Statements -> . Statement Statements
    (3) Statements -> . Statement
    (4) Statement -> . assign SEMI_COLON Statements
    (5) Statement -> . expression SEMI_COLON Statements
    (6) Statement -> . list SEMI_COLON Statements
    (7) Statement -> . do L_CBRACES Statements R_CBRACES while LPAREN COND RPAREN SEMI_COLON Statements
    (8) Statement -> . until LPAREN COND RPAREN L_CBRACES Statements R_CBRACES Statements
    (9) Statement -> . foreach DOLLAR ID LPAREN list RPAREN L_CBRACES Statements R_CBRACES Statements
    (10) Statement -> . declaration Statements
    (11) Statement -> .
    (26) assign -> . DOLLAR ID EQUAL expression
    (27) expression -> . expression PLUS term
    (28) expression -> . expression MINUS term
    (29) expression -> . expression TIMES term
    (30) expression -> . expression DIVIDE term
    (31) expression -> . LPAREN expression RPAREN
    (32) expression -> . term
    (33) list -> . AT ID
    (12) declaration -> . var_list SEMI_COLON
    (34) term -> . NUMBER
    (35) term -> . DOLLAR ID
    (13) var_list -> . DOLLAR ID
    (14) var_list -> . DOLLAR ID COMMA var_list
    (15) var_list -> . DOLLAR ID EQUAL expression
    (16) var_list -> . DOLLAR ID EQUAL expression COMMA var_list

  ! shift/reduce conflict for do resolved as shift
  ! shift/reduce conflict for until resolved as shift
  ! shift/reduce conflict for foreach resolved as shift
  ! shift/reduce conflict for DOLLAR resolved as shift
  ! shift/reduce conflict for LPAREN resolved as shift
  ! shift/reduce conflict for AT resolved as shift
  ! shift/reduce conflict for NUMBER resolved as shift
    do              shift and go to state 7
    until           shift and go to state 9
    foreach         shift and go to state 10
    $end            reduce using rule 11 (Statement -> .)
    R_CBRACES       reduce using rule 11 (Statement -> .)
    DOLLAR          shift and go to state 11
    LPAREN          shift and go to state 8
    AT              shift and go to state 14
    NUMBER          shift and go to state 16

  ! do              [ reduce using rule 11 (Statement -> .) ]
  ! until           [ reduce using rule 11 (Statement -> .) ]
  ! foreach         [ reduce using rule 11 (Statement -> .) ]
  ! DOLLAR          [ reduce using rule 11 (Statement -> .) ]
  ! LPAREN          [ reduce using rule 11 (Statement -> .) ]
  ! AT              [ reduce using rule 11 (Statement -> .) ]
  ! NUMBER          [ reduce using rule 11 (Statement -> .) ]

    assign                         shift and go to state 4
    Statements                     shift and go to state 34
    Statement                      shift and go to state 3
    expression                     shift and go to state 5
    list                           shift and go to state 6
    declaration                    shift and go to state 12
    term                           shift and go to state 13
    var_list                       shift and go to state 15

state 19

    (5) Statement -> expression SEMI_COLON . Statements
    (2) Statements -> . Statement Statements
    (3) Statements -> . Statement
    (4) Statement -> . assign SEMI_COLON Statements
    (5) Statement -> . expression SEMI_COLON Statements
    (6) Statement -> . list SEMI_COLON Statements
    (7) Statement -> . do L_CBRACES Statements R_CBRACES while LPAREN COND RPAREN SEMI_COLON Statements
    (8) Statement -> . until LPAREN COND RPAREN L_CBRACES Statements R_CBRACES Statements
    (9) Statement -> . foreach DOLLAR ID LPAREN list RPAREN L_CBRACES Statements R_CBRACES Statements
    (10) Statement -> . declaration Statements
    (11) Statement -> .
    (26) assign -> . DOLLAR ID EQUAL expression
    (27) expression -> . expression PLUS term
    (28) expression -> . expression MINUS term
    (29) expression -> . expression TIMES term
    (30) expression -> . expression DIVIDE term
    (31) expression -> . LPAREN expression RPAREN
    (32) expression -> . term
    (33) list -> . AT ID
    (12) declaration -> . var_list SEMI_COLON
    (34) term -> . NUMBER
    (35) term -> . DOLLAR ID
    (13) var_list -> . DOLLAR ID
    (14) var_list -> . DOLLAR ID COMMA var_list
    (15) var_list -> . DOLLAR ID EQUAL expression
    (16) var_list -> . DOLLAR ID EQUAL expression COMMA var_list

  ! shift/reduce conflict for do resolved as shift
  ! shift/reduce conflict for until resolved as shift
  ! shift/reduce conflict for foreach resolved as shift
  ! shift/reduce conflict for DOLLAR resolved as shift
  ! shift/reduce conflict for LPAREN resolved as shift
  ! shift/reduce conflict for AT resolved as shift
  ! shift/reduce conflict for NUMBER resolved as shift
    do              shift and go to state 7
    until           shift and go to state 9
    foreach         shift and go to state 10
    $end            reduce using rule 11 (Statement -> .)
    R_CBRACES       reduce using rule 11 (Statement -> .)
    DOLLAR          shift and go to state 11
    LPAREN          shift and go to state 8
    AT              shift and go to state 14
    NUMBER          shift and go to state 16

  ! do              [ reduce using rule 11 (Statement -> .) ]
  ! until           [ reduce using rule 11 (Statement -> .) ]
  ! foreach         [ reduce using rule 11 (Statement -> .) ]
  ! DOLLAR          [ reduce using rule 11 (Statement -> .) ]
  ! LPAREN          [ reduce using rule 11 (Statement -> .) ]
  ! AT              [ reduce using rule 11 (Statement -> .) ]
  ! NUMBER          [ reduce using rule 11 (Statement -> .) ]

    expression                     shift and go to state 5
    Statements                     shift and go to state 35
    Statement                      shift and go to state 3
    assign                         shift and go to state 4
    list                           shift and go to state 6
    declaration                    shift and go to state 12
    term                           shift and go to state 13
    var_list                       shift and go to state 15

state 20

    (27) expression -> expression PLUS . term
    (34) term -> . NUMBER
    (35) term -> . DOLLAR ID

    NUMBER          shift and go to state 16
    DOLLAR          shift and go to state 27

    term                           shift and go to state 36

state 21

    (28) expression -> expression MINUS . term
    (34) term -> . NUMBER
    (35) term -> . DOLLAR ID

    NUMBER          shift and go to state 16
    DOLLAR          shift and go to state 27

    term                           shift and go to state 37

state 22

    (29) expression -> expression TIMES . term
    (34) term -> . NUMBER
    (35) term -> . DOLLAR ID

    NUMBER          shift and go to state 16
    DOLLAR          shift and go to state 27

    term                           shift and go to state 38

state 23

    (30) expression -> expression DIVIDE . term
    (34) term -> . NUMBER
    (35) term -> . DOLLAR ID

    NUMBER          shift and go to state 16
    DOLLAR          shift and go to state 27

    term                           shift and go to state 39

state 24

    (6) Statement -> list SEMI_COLON . Statements
    (2) Statements -> . Statement Statements
    (3) Statements -> . Statement
    (4) Statement -> . assign SEMI_COLON Statements
    (5) Statement -> . expression SEMI_COLON Statements
    (6) Statement -> . list SEMI_COLON Statements
    (7) Statement -> . do L_CBRACES Statements R_CBRACES while LPAREN COND RPAREN SEMI_COLON Statements
    (8) Statement -> . until LPAREN COND RPAREN L_CBRACES Statements R_CBRACES Statements
    (9) Statement -> . foreach DOLLAR ID LPAREN list RPAREN L_CBRACES Statements R_CBRACES Statements
    (10) Statement -> . declaration Statements
    (11) Statement -> .
    (26) assign -> . DOLLAR ID EQUAL expression
    (27) expression -> . expression PLUS term
    (28) expression -> . expression MINUS term
    (29) expression -> . expression TIMES term
    (30) expression -> . expression DIVIDE term
    (31) expression -> . LPAREN expression RPAREN
    (32) expression -> . term
    (33) list -> . AT ID
    (12) declaration -> . var_list SEMI_COLON
    (34) term -> . NUMBER
    (35) term -> . DOLLAR ID
    (13) var_list -> . DOLLAR ID
    (14) var_list -> . DOLLAR ID COMMA var_list
    (15) var_list -> . DOLLAR ID EQUAL expression
    (16) var_list -> . DOLLAR ID EQUAL expression COMMA var_list

  ! shift/reduce conflict for do resolved as shift
  ! shift/reduce conflict for until resolved as shift
  ! shift/reduce conflict for foreach resolved as shift
  ! shift/reduce conflict for DOLLAR resolved as shift
  ! shift/reduce conflict for LPAREN resolved as shift
  ! shift/reduce conflict for AT resolved as shift
  ! shift/reduce conflict for NUMBER resolved as shift
    do              shift and go to state 7
    until           shift and go to state 9
    foreach         shift and go to state 10
    $end            reduce using rule 11 (Statement -> .)
    R_CBRACES       reduce using rule 11 (Statement -> .)
    DOLLAR          shift and go to state 11
    LPAREN          shift and go to state 8
    AT              shift and go to state 14
    NUMBER          shift and go to state 16

  ! do              [ reduce using rule 11 (Statement -> .) ]
  ! until           [ reduce using rule 11 (Statement -> .) ]
  ! foreach         [ reduce using rule 11 (Statement -> .) ]
  ! DOLLAR          [ reduce using rule 11 (Statement -> .) ]
  ! LPAREN          [ reduce using rule 11 (Statement -> .) ]
  ! AT              [ reduce using rule 11 (Statement -> .) ]
  ! NUMBER          [ reduce using rule 11 (Statement -> .) ]

    list                           shift and go to state 6
    Statements                     shift and go to state 40
    Statement                      shift and go to state 3
    assign                         shift and go to state 4
    expression                     shift and go to state 5
    declaration                    shift and go to state 12
    term                           shift and go to state 13
    var_list                       shift and go to state 15

state 25

    (7) Statement -> do L_CBRACES . Statements R_CBRACES while LPAREN COND RPAREN SEMI_COLON Statements
    (2) Statements -> . Statement Statements
    (3) Statements -> . Statement
    (4) Statement -> . assign SEMI_COLON Statements
    (5) Statement -> . expression SEMI_COLON Statements
    (6) Statement -> . list SEMI_COLON Statements
    (7) Statement -> . do L_CBRACES Statements R_CBRACES while LPAREN COND RPAREN SEMI_COLON Statements
    (8) Statement -> . until LPAREN COND RPAREN L_CBRACES Statements R_CBRACES Statements
    (9) Statement -> . foreach DOLLAR ID LPAREN list RPAREN L_CBRACES Statements R_CBRACES Statements
    (10) Statement -> . declaration Statements
    (11) Statement -> .
    (26) assign -> . DOLLAR ID EQUAL expression
    (27) expression -> . expression PLUS term
    (28) expression -> . expression MINUS term
    (29) expression -> . expression TIMES term
    (30) expression -> . expression DIVIDE term
    (31) expression -> . LPAREN expression RPAREN
    (32) expression -> . term
    (33) list -> . AT ID
    (12) declaration -> . var_list SEMI_COLON
    (34) term -> . NUMBER
    (35) term -> . DOLLAR ID
    (13) var_list -> . DOLLAR ID
    (14) var_list -> . DOLLAR ID COMMA var_list
    (15) var_list -> . DOLLAR ID EQUAL expression
    (16) var_list -> . DOLLAR ID EQUAL expression COMMA var_list

  ! shift/reduce conflict for do resolved as shift
  ! shift/reduce conflict for until resolved as shift
  ! shift/reduce conflict for foreach resolved as shift
  ! shift/reduce conflict for DOLLAR resolved as shift
  ! shift/reduce conflict for LPAREN resolved as shift
  ! shift/reduce conflict for AT resolved as shift
  ! shift/reduce conflict for NUMBER resolved as shift
    do              shift and go to state 7
    until           shift and go to state 9
    foreach         shift and go to state 10
    R_CBRACES       reduce using rule 11 (Statement -> .)
    DOLLAR          shift and go to state 11
    LPAREN          shift and go to state 8
    AT              shift and go to state 14
    NUMBER          shift and go to state 16

  ! do              [ reduce using rule 11 (Statement -> .) ]
  ! until           [ reduce using rule 11 (Statement -> .) ]
  ! foreach         [ reduce using rule 11 (Statement -> .) ]
  ! DOLLAR          [ reduce using rule 11 (Statement -> .) ]
  ! LPAREN          [ reduce using rule 11 (Statement -> .) ]
  ! AT              [ reduce using rule 11 (Statement -> .) ]
  ! NUMBER          [ reduce using rule 11 (Statement -> .) ]

    Statements                     shift and go to state 41
    Statement                      shift and go to state 3
    assign                         shift and go to state 4
    expression                     shift and go to state 5
    list                           shift and go to state 6
    declaration                    shift and go to state 12
    term                           shift and go to state 13
    var_list                       shift and go to state 15

state 26

    (31) expression -> LPAREN expression . RPAREN
    (27) expression -> expression . PLUS term
    (28) expression -> expression . MINUS term
    (29) expression -> expression . TIMES term
    (30) expression -> expression . DIVIDE term

    RPAREN          shift and go to state 42
    PLUS            shift and go to state 20
    MINUS           shift and go to state 21
    TIMES           shift and go to state 22
    DIVIDE          shift and go to state 23


state 27

    (35) term -> DOLLAR . ID

    ID              shift and go to state 43


state 28

    (8) Statement -> until LPAREN . COND RPAREN L_CBRACES Statements R_CBRACES Statements
    (17) COND -> . DOLLAR ID rel DOLLAR ID
    (18) COND -> . expression rel expression
    (19) COND -> . expression rel DOLLAR ID
    (20) COND -> . DOLLAR ID rel expression
    (27) expression -> . expression PLUS term
    (28) expression -> . expression MINUS term
    (29) expression -> . expression TIMES term
    (30) expression -> . expression DIVIDE term
    (31) expression -> . LPAREN expression RPAREN
    (32) expression -> . term
    (34) term -> . NUMBER
    (35) term -> . DOLLAR ID

    DOLLAR          shift and go to state 45
    LPAREN          shift and go to state 8
    NUMBER          shift and go to state 16

    COND                           shift and go to state 44
    expression                     shift and go to state 46
    term                           shift and go to state 13

state 29

    (9) Statement -> foreach DOLLAR . ID LPAREN list RPAREN L_CBRACES Statements R_CBRACES Statements

    ID              shift and go to state 47


state 30

    (26) assign -> DOLLAR ID . EQUAL expression
    (35) term -> DOLLAR ID .
    (13) var_list -> DOLLAR ID .
    (14) var_list -> DOLLAR ID . COMMA var_list
    (15) var_list -> DOLLAR ID . EQUAL expression
    (16) var_list -> DOLLAR ID . EQUAL expression COMMA var_list

  ! reduce/reduce conflict for SEMI_COLON resolved using rule 13 (var_list -> DOLLAR ID .)
    EQUAL           shift and go to state 48
    PLUS            reduce using rule 35 (term -> DOLLAR ID .)
    MINUS           reduce using rule 35 (term -> DOLLAR ID .)
    TIMES           reduce using rule 35 (term -> DOLLAR ID .)
    DIVIDE          reduce using rule 35 (term -> DOLLAR ID .)
    SEMI_COLON      reduce using rule 13 (var_list -> DOLLAR ID .)
    COMMA           shift and go to state 49

  ! SEMI_COLON      [ reduce using rule 35 (term -> DOLLAR ID .) ]


state 31

    (10) Statement -> declaration Statements .
